--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .textGradient {
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-fancyTestStart to-fanctTextEnd;
+  }
+}
